# gazeboplugin-quadrotor2

./: CMakeLists.txt
include/quadrotor/: quadrotorcontrol.hh  quadrotorplugin.hh
include/quadrotor/control/: twist.hh
include/quadrotor/interfaces/: pose3di.h
models/ArDrone2/: ardrone_iceplugin.sdf  model.config
models/ArDrone2/ardrone_control/: ardrone_control_only.sdf  model.config
models/ArDrone2/ardrone_hw/: ardrone_hw.sdf  model.config
src/: quadrotorcontrol.cc  quadrotorice.cc  quadrotorplugin.cc  quadrotorsensors.cc
src/interfaces/: cmdveli.cpp  pose3di.cpp
src/stable/components/gazeboserver/models/ArDrone2/: model.sdf
